--- a/lsp/package.json
+++ b/lsp/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "A collection of scripts that use language servers, and the package.json to make the client library available.",
   "main": "index.js",
-  "type:": "module",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
