--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "lsp"
   ],
   "main": "index.js",
-  "type:": "module",
+  "type": "module",
   "scripts": {
+    "lint": "eslint .",
     "prettify": "prettier --write .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -18,6 +19,17 @@
     "prettier": "^3.0.3",
     "ts-node": "^10.9.1",
     "zx": "^7.2.3"
+  },
+  "devDependencies": {
+    "@types/eslint": "^8.44.2",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
+    "eslint": "^8.37.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-config-xo": "^0.43.1",
+    "eslint-plugin-deprecation": "^1.4.1",
+    "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-simple-import-sort": "^10.0.0"
   },
   "prettier": {
     "endOfLine": "auto",
