--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "type": "module",
   "scripts": {
     "lint": "eslint .",
+    "prepare": "husky install",
     "prettify": "prettier --write .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -29,12 +30,30 @@
     "eslint-config-xo": "^0.43.1",
     "eslint-plugin-deprecation": "^1.4.1",
     "eslint-plugin-prettier": "^5.0.0",
-    "eslint-plugin-simple-import-sort": "^10.0.0"
+    "eslint-plugin-simple-import-sort": "^10.0.0",
+    "husky": "^8.0.3",
+    "lint-staged": "^14.0.1"
   },
   "prettier": {
     "endOfLine": "auto",
     "printWidth": 100,
     "tabWidth": 2,
     "useTabs": false
+  },
+  "lint-staged": {
+    "*": "prettier --ignore-unknown --write",
+    "*.js": [
+      "eslint --fix",
+      "git add"
+    ],
+    "*.json": [
+      "prettier --write",
+      "git add"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   }
 }
