WIP-lsif script, but reading JSON not JSONL

--- a/lsif/package.json
+++ b/lsif/package.json
@@ -10,7 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "lsif-protocol": "^0.5.3",
     "ts-node": "^10.9.1",
+    "yargs": "^17.7.2",
     "zx": "^7.2.3"
   }
 }
