--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/node": "^16.18.46",
     "prettier": "^3.0.3",
     "ts-node": "^10.9.1",
     "zx": "^7.2.3"
   },
   "devDependencies": {
     "@types/eslint": "^8.44.2",
+    "@types/yargs": "^17.0.24",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
     "eslint": "^8.37.0",
@@ -32,7 +34,8 @@
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "husky": "^8.0.3",
-    "lint-staged": "^14.0.1"
+    "lint-staged": "^14.0.1",
+    "ts-toolbelt": "^9.6.0"
   },
   "prettier": {
     "endOfLine": "auto",
