--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@likec4/core": "^0.33.1",
     "@types/node": "^16.18.46",
     "prettier": "^3.0.3",
     "ts-node": "^10.9.1",
