--- a/lsif/package.json
+++ b/lsif/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "lsif-protocol": "^0.6.0-next.7",
+    "lsif-sqlite": "^0.6.0-next.7",
     "ts-node": "^10.9.1",
     "yargs": "^17.7.2",
     "zx": "^7.2.3"
