--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "prepare": "husky install",
     "prettify": "prettier --write .",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "test:data:export:builderbook": "lsif-tsc --workspaceRoot lsif/__tests__/data/builderbook/builderbook/ --project lsif/__tests__/data/builderbook.tsconfig.json --package lsif/__tests__/data/builderbook/builderbook/package.json --out lsif/__tests__/data/builderbook.lsif.jsonl --typeAcquisition"
+    "test:data:export:builderbook": "pushd lsif/__tests__/data ; lsif-tsc --workspaceRoot ./builderbook/builderbook/ --project ./builderbook.tsconfig.json --package ./builderbook/builderbook/package.json --out ./builderbook.lsif.jsonl --typeAcquisition  --noContents ; popd"
   },
   "author": "",
   "license": "MIT",
