--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@likec4/core": "^0.33.1",
     "@types/node": "^16.18.46",
     "inflection": "^2.0.1",
+    "pino": "^8.15.1",
+    "pino-pretty": "^10.2.0",
     "prettier": "^3.0.3",
     "ts-node": "^10.9.1",
     "vscode-languageserver": "~8.1.0",
